<?xml version="1.0" encoding="utf-8"?>


 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/planner"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView

            style="@style/text_view"
            android:textAlignment="center"
            android:backgroundTint="@color/white"
            android:text="@string/app_name"

        />

        <TextView

            style="@style/text_view"
            android:text="@string/bruto"

        />

        <EditText

            android:id="@+id/edit_bruto"
            style="@style/edit_text"

            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView

            style="@style/text_view"
            android:text="@string/dependentes"

        />

        <EditText

            android:id="@+id/edit_dependentes"
            style="@style/edit_text"

            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

        <TextView

            style="@style/text_view"
            android:text="@string/plano"

        />

      <RadioGroup
          style="@style/text_view"
          android:backgroundTint="@color/white"
          android:background="@color/transparente"
          android:id="@+id/group_ps">

          <RadioButton
              style="@style/text_view"
              android:backgroundTint="@color/white"
              android:background="@color/transparente"
              android:text="@string/standard"
              android:id="@+id/standard" />

          <RadioButton
              style="@style/text_view"
              android:backgroundTint="@color/white"
              android:background="@color/transparente"
              android:text="@string/basico"
              android:id="@+id/basico" />

          <RadioButton
              style="@style/text_view"
              android:backgroundTint="@color/white"
              android:background="@color/transparente"
              android:text="@string/soper"
              android:id="@+id/soper" />

          <RadioButton
              style="@style/text_view"
              android:backgroundTint="@color/white"
              android:background="@color/transparente"
              android:text="@string/mester"
              android:id="@+id/mester" />

      </RadioGroup>

        <TextView
            style="@style/text_view"
            android:text="@string/vt"

        />

        <RadioGroup
            android:id="@+id/group_vt"
            style="@style/text_view"
            android:background="@color/transparente"
            android:backgroundTint="@color/white">

        <RadioButton
            style="@style/text_view"
            android:backgroundTint="@color/white"
            android:background="@color/transparente"
            android:text="@string/sim"
            android:id="@+id/sim" />

        <RadioButton
             style="@style/text_view"
             android:backgroundTint="@color/white"
            android:background="@color/transparente"
             android:text="@string/não"
             android:id="@+id/nao" />

        </RadioGroup>


        <TextView
            style="@style/text_view"
            android:text="@string/va"
        />

        <RadioGroup
            android:id="@+id/group_va"
            style="@style/text_view"
            android:background="@color/transparente"
            android:backgroundTint="@color/white">

            <RadioButton
                style="@style/text_view"
                android:backgroundTint="@color/white"
                android:background="@color/transparente"
                android:text="@string/sim"
                android:id="@+id/sim2" />

            <RadioButton
                style="@style/text_view"
                android:backgroundTint="@color/white"
                android:background="@color/transparente"
                android:text="@string/não"
                android:id="@+id/nao2" />

        </RadioGroup>

        <TextView
            style="@style/text_view"
            android:text="@string/vr"
        />

        <RadioGroup
            android:id="@+id/group_vr"
            style="@style/text_view"
            android:background="@color/transparente"
            android:backgroundTint="@color/white">

            <RadioButton
                style="@style/text_view"
                android:backgroundTint="@color/white"
                android:background="@color/transparente"
                android:text="@string/sim"
                android:id="@+id/sim3" />

            <RadioButton
                style="@style/text_view"
                android:backgroundTint="@color/white"
                android:background="@color/transparente"
                android:text="@string/não"
                android:id="@+id/nao3" />

        </RadioGroup>


    <LinearLayout
        style="@style/estilo_base">

        <!--style="@style/bt_calc"-->

        <Button
            android:layout_width="0dp"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/bt_calcular"
            android:textColor="@color/white"
            android:backgroundTint="@color/black"
            android:text="@string/calcular"
            />

        <Button
            android:layout_width="0dp"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/bt_limpar"
            android:textColor="@color/white"
            android:backgroundTint="@color/black"
            android:text="@string/limpar"
            />


    </LinearLayout>

    </LinearLayout>

</ScrollView>